<resources>
    <string name="app_name">Remind My Product</string>
    <string name="nella_tua_dispensa_ci_sono">Nella tua dispensa ci sono</string>
    <string name="placeholder_numbers">XXX</string>
    <string name="prodotti_scaduti">prodotti scaduti</string>
    <string name="per_un_totale_di">per uno spreco totale di</string>
    <string name="placeholder_price">0,00 €</string>
    <string name="placeholder_suggestion">suggestion</string>
    <string name="report_suggest_bad">Puoi fare di meglio...</string>
    <string name="report_suggest_good">Perfetto! Continua così</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="currency">€</string>
    <string name="title_activity_report">Report</string>
    <string name="prodotto">Prodotto</string>
    <string name="descrizione_prodotto">Descrizione Prodotto</string>
    <string name="quantita">Quantità</string>
    <string name="xx_pezzi">XX pezzi</string>
    <string name="data_di_scadenza">Data di Scadenza:</string>
    <string name="placeholder_data">01/01/2019</string>
    <string name="prezzo">Prezzo</string>
    <string name="placeholder_valore">0,00 €</string>
    <string name="data_di_inserimento">Data di Inserimento:</string>
    <string name="prodotto_chiuso_aperto">Prodotto Chiuso/Aperto</string>
    <string name="consuma_tutto">CONSUMA TUTTO</string>
    <string name="consuma_in_parte">CONSUMA IN PARTE</string>
    <string name="scadenza_notifiche">DATA DI SCADENZA</string>
    <string name="testo_scadenza_notifiche">Indica da quanti giorni prima vuoi essere avvisato</string>
    <string name="quantita_notifiche">QUANTITA\'</string>
    <string name="testo_quantita_notifiche">Indica a quanti pezzi mancanti vieni avvisato</string>
    <string name="si">Sì</string>
    <string name="no">No</string>
    <string name="seleziona_prodotto_consumato">Quanto prodotto hai consumato?</string>
    <string name="ok">OK</string>
    <string name="undo">Annulla</string>
    <string name="domanda_vuoi_rimuovere_prodotto">Vuoi rimuovere questo prodotto dalla tua dispensa?</string>
    <string name="aggiungi_prodotto">AGGIUNGI PRODOTTO</string>
    <string name="la_mia_dispensa">LA MIA DISPENSA</string>
    <string name="vedi_tutti"><![CDATA[Vedi Tutti >>]]></string>
    <string name="prodotti_in_scadenza">PRODOTTI IN SCADENZA</string>
    <string name="apri_prodotto">APRI PRODOTTO</string>
    <string name="conferma_apertura">Confermi di aver aperto questo prodotto?</string>
    <string name="la_mia_dispensa_minuscolo">La Mia Dispensa</string>
    <string name="consuma_in_parte_select">Seleziona quanto vuoi consumare</string>
    <string name="quantity_short_qta">q.ta: </string>
    <string name="cat_bevande">Bevande</string>
    <string name="cat_latticini">Latticini</string>
    <string name="cat_surgelati">Surgelati</string>
    <string name="cat_ortofrutta">Ortofrutta</string>
    <string name="cat_panificio">Panificio</string>
    <string name="cat_pasticceria">Pasticceria</string>
    <string name="cat_none">Nessuna Categoria</string>
    <string name="updated">Aggiornato</string>
    <string name="error">Errore</string>
    <string name="product_detail">Dettaglio Prodotto</string>
    <string name="remind_my_product">Remind My Product</string>
    <string name="in_scadenza_title">In Scadenza</string>
    <string name="conferma">Conferma</string>
    <string name="pezzi">pezzi</string>
    <string name="day">Giorno</string>
    <string name="month">Mese</string>
    <string name="year">Anno</string>
    <string name="descrizione">Descrizione</string>
    <string name="nome">Nome</string>
    <string name="added_to_dispensa">aggiunto alla dispensa.</string>
    <string name="insert_name">Inserisci nome</string>
    <string name="insert_qta">Inserisci quantità</string>
    <string name="insert_price">Inserisci prezzo</string>
    <string name="february">Febbraio</string>
    <string name="april">Aprile</string>
    <string name="june">Giugno</string>
    <string name="september">Settembre</string>
    <string name="november">Novembre</string>
    <string name="insert_correctDate">Inserire la data corretta</string>
    <string name="expiredate_before_today">La data di scadenza è precedente alla data odierna</string>
    <string-array name="elencoMesi">
        <item> Gennaio </item> <item> Febbraio </item> <item> Marzo </item> <item> Aprile </item>
        <item> Maggio </item> <item> Giugno </item> <item> Luglio </item> <item> Agosto </item>
        <item> Settembre </item> <item> Ottobre </item> <item> Novembre </item> <item> Dicembre </item>
    </string-array>
    <string name="channel_name">Canale notifica</string>
    <string name="channel_description">Questo è il canale per le notifiche della app.</string>
    <string name="no_product_expiring">Nessun prodotto in scadenza!</string>
    <string name="notify_expiring_title">SCADENZA DI:</string>
    <string name="notify_expiring_text">La data di scadenza è:</string>
    <string name="notify_quantity_title">PRODOTTO:</string>
    <string name="notify_quantity_text_1">Mancano</string>
    <string name="notify_quantity_text_2">elementi</string>
    <string name="filter">Filtra per categoria</string>
    <string name="ricerca">Cerca Prodotto</string>
    <string name="progetto">Progetto di Design of Mobile Applications</string>
    <string name="nomi_autori">a cura di Paolo De Reggi e Samuele Ziero</string>
    <string name="email">dereggi.paolo@spes.uniud.it ziero.samuele@spes.uniud.it</string>
    <string name="drawer_dispensa">La Mia Dispensa</string>
    <string name="drawer_report">Report</string>
    <string name="drawer_notifiche">Notifiche</string>

</resources>
